completion swagger documentation
