# handler/book_handler.go
@@ -17,6 +17,15 @@ func NewBookHandler(bookService *service.BookService) *BookHandler {
 	return &BookHandler{BookService: bookService}
 }
 
+// CreateBook @Summary Create a new book
+// @Description Add a new book to the database
+// @Tags Books
+// @Security OAuth2Password
+// @Accept json
+// @Produce json
+// @Param book body request.CreateBookDto true "Book data"
+// @Success 200 {object} swagger.SuccessResponse
+// @Router /api/v1/book/create [post]
 func (handler *BookHandler) CreateBook(c *fiber.Ctx) error {
 	var payload request.CreateBookDto
 	if err := c.BodyParser(&payload); err != nil {
@@ -39,7 +48,7 @@ func (handler *BookHandler) CreateBook(c *fiber.Ctx) error {
 // @Security OAuth2Password
 // @Accept json
 // @Produce json
-// @Success 200 {object} documentation.ListBookResponse
+// @Success 200 {object} swagger.ListBookResponse
 // @Router /api/v1/book/list [get]
 func (handler *BookHandler) GetBooks(c *fiber.Ctx) error {
 	page := c.QueryInt("page", 1)
@@ -53,6 +62,15 @@ func (handler *BookHandler) GetBooks(c *fiber.Ctx) error {
 	return utils.SuccessResponse(c, books)
 }
 
+// GetDetailBook @Summary Get detail book
+// @Description Get detail of book
+// @Tags Books
+// @Security OAuth2Password
+// @Accept json
+// @Produce json
+// @Success 200 {object} swagger.DetailBookResponse
+// @Router /api/v1/book/detail/{id} [get]
+// @Param id path string true "Book ID"
 func (handler *BookHandler) GetDetailBook(c *fiber.Ctx) error {
 	idStr := c.Params("id")
 
@@ -69,6 +87,16 @@ func (handler *BookHandler) GetDetailBook(c *fiber.Ctx) error {
 	return utils.SuccessResponse(c, book)
 }
 
+// UpdateBook @Summary Update a book
+// @Description Update data of a book
+// @Tags Books
+// @Security OAuth2Password
+// @Accept json
+// @Produce json
+// @Param id path string true "Book ID"
+// @Param payload body request.UpdateBookDto true "Book data"
+// @Success 200 {object} swagger.SuccessResponse
+// @Router /api/v1/book/update/{id} [put]
 func (handler *BookHandler) UpdateBook(c *fiber.Ctx) error {
 	idStr := c.Params("id")
 
@@ -92,6 +120,15 @@ func (handler *BookHandler) UpdateBook(c *fiber.Ctx) error {
 	return utils.SuccessResponse(c, "Book updated successfully")
 }
 
+// DeleteBook @Summary Delete a book
+// @Description Delete a book from the database
+// @Tags Books
+// @Security OAuth2Password
+// @Accept json
+// @Produce json
+// @Success 200 {object} swagger.SuccessResponse
+// @Router /api/v1/book/delete/{id} [delete]
+// @Param id path string true "Book ID"
 func (handler *BookHandler) DeleteBook(c *fiber.Ctx) error {
 	idStr := c.Params("id")
 
